--- a/app/src/main/res/layout/preauthorization.xml
+++ b/app/src/main/res/layout/preauthorization.xml
@@ -73,22 +73,24 @@
                 app:hintEnabled="false"
                 app:prefixText="$   "
                 app:prefixTextAppearance="@style/prefix"
-                app:prefixTextColor="@color/primary_black">
+                app:prefixTextColor="@color/primary_black"
+                app:expandedHintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etAmount"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:autofillHints="creditCardSecurityCode"
+                    android:cursorVisible="true"
                     android:fontFamily="@font/opensans_semibold"
                     android:gravity="center_vertical"
                     android:hint="0.00"
                     android:imeOptions="actionDone"
                     android:maxLength="4"
                     android:maxLines="1"
+                    android:paddingTop="@dimen/_14sdp"
                     android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                     android:singleLine="true"
-                    android:paddingTop="@dimen/_14sdp"
                     android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
