--- a/app/src/main/res/layout/pending_posted_listitem.xml
+++ b/app/src/main/res/layout/pending_posted_listitem.xml
@@ -63,7 +63,7 @@
             <TextView
                 android:id="@+id/pendingmessageTV"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:fontFamily="@font/opensans_semibold"
                 android:layout_weight=".65"
                 android:textColor="@color/primary_black"
@@ -78,7 +78,7 @@
             <TextView
                 android:id="@+id/pendingmessagTV"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:fontFamily="@font/opensans_semibold"
                 android:singleLine="true"
                 android:layout_weight=".3"
@@ -91,7 +91,7 @@
             <TextView
                 android:id="@+id/amountTV"
                 android:layout_width="@dimen/_100sdp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/_5sdp"
                 android:fontFamily="@font/opensans_bold"
