--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -501,7 +501,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Upload DBA filing"
+                        android:text="Upload DBA filing (Optional)"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_10ssp"
                         android:visibility="visible" />
@@ -525,7 +525,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_1sdp"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="Uploaded DBA filing"
+                                android:text="Uploaded DBA filing (Optional)"
                                 android:textColor="@color/primary_color"
                                 android:textSize="@dimen/_10ssp" />
 
