--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,14 @@
     <color name="light_gray">#C5C5C5</color>
     <color name="primary_green">#00A6A2</color>
     <color name="loader_color">#0F6764</color>
+
+    <color name="et_bg_gray">#f2f4f5</color>
+    <color name="button_bg">#e4eaf2</color>
+    <color name="logout_bg">#166567</color>
+    <color name="mpos_bg">#008682</color>
+    <color name="primary_black">#151515</color>
+    <color name="blue_light">#d8e2f0</color>
+    <color name="viewcolor">#e8e8e8</color>
+    <color name="dark_gray">#767676</color>
+
 </resources>
