--- a/app/src/main/res/layout/fragment_dashboard_frag.xml
+++ b/app/src/main/res/layout/fragment_dashboard_frag.xml
@@ -10,7 +10,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
@@ -67,8 +67,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/_32sdp"
-                        android:layout_marginTop="@dimen/_43sdp"
-                        android:layout_marginBottom="@dimen/_43sdp"
+                        android:layout_marginTop="@dimen/_40sdp"
+                        android:layout_marginBottom="@dimen/_40sdp"
                         android:background="@drawable/corecircle2"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -85,7 +85,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_16sdp"
-                            android:layout_marginBottom="@dimen/_28sdp"
+                            android:layout_marginBottom="@dimen/_25sdp"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center"
                             android:text="Start New Sale"
