--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="inactive_green">#B5E2E0</color>
     <color name="dark_gray">#767676</color>
     <color name="loader_color">#0F6764</color>
+    <color name="blue_light">#f2f5f8</color>
+    <color name="vlight_grey">#E8E8E8</color>
 </resources>
