--- a/app/src/main/res/layout/fragment_transaction_list_filter_frag.xml
+++ b/app/src/main/res/layout/fragment_transaction_list_filter_frag.xml
@@ -47,6 +47,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/batchMoneyTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
@@ -81,6 +82,7 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_38sdp"
+                        android:layout_marginHorizontal="@dimen/_1sdp"
                         android:layout_marginTop="@dimen/_21sdp"
                         android:layout_marginBottom="@dimen/_21sdp"
                         app:cardCornerRadius="@dimen/_19sdp">
