--- a/app/src/main/res/layout/fragment_transaction_list_filter_frag.xml
+++ b/app/src/main/res/layout/fragment_transaction_list_filter_frag.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/et_bg_gray">
+        android:background="@color/et_bg_gray"
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/SearchLL"
@@ -171,5 +172,5 @@
         </LinearLayout>
 
 
-    </FrameLayout>
+    </LinearLayout>
 </layout>
