--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,7 @@
     <color name="mpos_bg">#008682</color>
     <color name="blue_light">#d8e2f0</color>
     <color name="viewcolor">#e8e8e8</color>
+    <color name="slidebtn_bg">#DFF4F3</color>
+    <color name="bg_view_color">#f2f4f5</color>
 
 </resources>
