Transaction History Screen Chnages

--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:background="@drawable/onboard_background_mask"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -17,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/coynimpos_logo" />
+            android:src="@drawable/ic_onboard_mpos" />
 
         <TextView
             android:id="@+id/tvButton"
