--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,215 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:fitsSystemWindows="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <ImageView
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_13sdp"
-        android:layout_marginTop="@dimen/_33sdp"
-        android:padding="@dimen/_8sdp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_40sdp"
+        android:contentDescription="@string/back"
+        android:padding="@dimen/_5sdp"
         android:src="@drawable/ic_cross" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginHorizontal="@dimen/_21sdp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/_30sdp"
-            android:src="@drawable/coyni_logo" />
+            android:layout_marginHorizontal="@dimen/_21sdp"
+            android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/llBoxStroke"
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/outline_box_unfocused"
-                android:gravity="center"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/_30sdp"
+                android:contentDescription="@string/mpos_logo"
+                android:src="@drawable/ic_login_mpos" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_30sdp"
-                    android:gravity="center">
+                    android:id="@+id/llBoxStroke"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/outline_box_unfocused"
+                    android:gravity="center"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text="TID-"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_12ssp" />
+                        android:layout_height="@dimen/_30sdp"
+                        android:gravity="center">
 
-                    <View
-                        android:layout_width="@dimen/_1sdp"
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="@string/tid"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
+
+                        <View
+                            android:layout_width="@dimen/_1sdp"
+                            android:layout_height="wrap_content"
+                            android:background="@color/light_gray" />
+
+                    </LinearLayout>
+
+                    <EditText
+                        android:id="@+id/tidET"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/light_gray" />
+                        android:layout_gravity="center"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                        android:background="@android:color/transparent"
+                        android:digits="0123456789"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:hint="@string/terminal_id"
+                        android:inputType="number|textNoSuggestions"
+                        android:maxLength="8"
+                        android:maxLines="1"
+                        android:paddingVertical="@dimen/_14sdp"
+                        android:paddingStart="@dimen/_10sdp"
+                        android:paddingEnd="@dimen/_14sdp"
+                        android:singleLine="true"
+                        android:textColor="@color/primary_black"
+                        android:textColorHint="@color/light_gray"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:textSize="@dimen/_12ssp" />
 
                 </LinearLayout>
 
-                <EditText
-                    android:id="@+id/tidET"
+                <TextView
+                    android:id="@+id/tvUpperHint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@android:color/white"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:text="@string/terminal_id"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/llBoxStroke"
+                    app:layout_constraintStart_toStartOf="@+id/llBoxStroke"
+                    app:layout_constraintTop_toTopOf="@+id/llBoxStroke" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:id="@+id/llTIDError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_1sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:ignore="UseCompoundDrawables">
+
+                <ImageView
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="@dimen/_12sdp"
+                    android:contentDescription="@string/error"
+                    android:src="@drawable/ic_error" />
+
+                <TextView
+                    android:id="@+id/tvTIDError"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@android:color/transparent"
-                    android:digits="0123456789"
+                    android:layout_marginStart="@dimen/_6sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/_10ssp" />
+            </LinearLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/passwordTIL"
+                style="@style/TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:hint="@string/password"
+                android:textColorHint="@color/light_gray"
+                app:boxStrokeColor="@color/primary_green"
+                app:endIconDrawable="@drawable/ic_eyeclose"
+                app:endIconMode="custom"
+                app:endIconTint="@color/dark_gray"
+                app:errorIconDrawable="@null"
+                app:hintTextColor="@color/primary_green">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/passwordET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?&amp;"
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="Terminal ID"
-                    android:inputType="number|textNoSuggestions"
-                    android:maxLength="8"
-                    android:maxLines="1"
+                    android:imeOptions="actionDone"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword|textNoSuggestions"
+                    android:longClickable="false"
+                    android:maxLength="12"
                     android:padding="@dimen/_14sdp"
+                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                     android:singleLine="true"
                     android:textColor="@color/primary_black"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
+                    android:textIsSelectable="false"
                     android:textSize="@dimen/_12ssp" />
 
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:id="@+id/passwordErrorLL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_1sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:ignore="UseCompoundDrawables">
+
+                <ImageView
+                    android:layout_width="@dimen/_12sdp"
+                    android:layout_height="@dimen/_12sdp"
+                    android:contentDescription="@string/error"
+                    android:src="@drawable/ic_error" />
+
+                <TextView
+                    android:id="@+id/passwordErrorTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_6sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/_10ssp" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvUpperHint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="8dp"
-                android:background="@android:color/white"
-                android:fontFamily="@font/opensans_semibold"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:text="Terminal ID"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@+id/llBoxStroke"
-                app:layout_constraintStart_toStartOf="@+id/llBoxStroke"
-                app:layout_constraintTop_toTopOf="@+id/llBoxStroke" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <LinearLayout
-            android:id="@+id/llTIDError"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginStart="@dimen/_1sdp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <ImageView
-                android:layout_width="@dimen/_12sdp"
-                android:layout_height="@dimen/_12sdp"
-                android:src="@drawable/ic_error"/>
-
-            <TextView
-                android:id="@+id/tvTIDError"
+                android:id="@+id/tvButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="User already exists. Try a new phone number or log in."
-                android:textColor="@color/error_red"
-                android:textSize="@dimen/_10ssp" />
-        </LinearLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/passwordTIL"
-            style="@style/TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:hint="Password"
-            android:textColorHint="@color/light_gray"
-            app:boxStrokeColor="@color/primary_green"
-            app:endIconDrawable="@drawable/ic_eyeclose"
-            app:endIconMode="custom"
-            app:endIconTint="@color/dark_gray"
-            app:errorIconDrawable="@null"
-            app:hintTextColor="@color/primary_green">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/passwordET"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?&amp;"
-                android:fontFamily="@font/opensans_semibold"
-                android:imeOptions="actionDone"
-                android:importantForAutofill="no"
-                android:inputType="textPassword|textNoSuggestions"
-                android:longClickable="false"
-                android:maxLength="12"
-                android:padding="@dimen/_14sdp"
-                android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                android:singleLine="true"
-                android:textColor="@color/primary_black"
-                android:textColorHint="@color/light_gray"
-                android:textCursorDrawable="@drawable/cursor_color"
-                android:textIsSelectable="false"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_27sdp"
+                android:background="@drawable/button_bg_inactive"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
+                android:text="@string/log_in"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_12ssp" />
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:id="@+id/passwordErrorLL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_marginStart="@dimen/_1sdp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <ImageView
-                android:layout_width="@dimen/_12sdp"
-                android:layout_height="@dimen/_12sdp"
-                android:src="@drawable/ic_error"/>
-
-            <TextView
-                android:id="@+id/passwordErrorTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="User already exists. Try a new phone number or log in."
-                android:textColor="@color/error_red"
-                android:textSize="@dimen/_10ssp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvButton"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_43sdp"
-            android:layout_marginTop="@dimen/_27sdp"
-            android:background="@drawable/button_bg_inactive"
-            android:fontFamily="@font/opensans_bold"
-            android:gravity="center"
-            android:text="@string/log_in"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_12ssp" />
-
-    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
