--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,8 @@
     <color name="inactive_green">#B5E2E0</color>
     <color name="dark_gray">#767676</color>
     <color name="loader_color">#0F6764</color>
+    <color name="light_blue">#d8e2f0</color>
+    <color name="true_green">#008a05</color>
+    <color name="layout_bg">#F2F4F5</color>
+
 </resources>
