--- a/app/src/main/res/layout/activity_mpos_dashboard.xml
+++ b/app/src/main/res/layout/activity_mpos_dashboard.xml
@@ -22,6 +22,7 @@
                 style="@style/Base.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/_10sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.473"
