Generate Qr UI design

--- a/app/src/main/res/layout/activity_mpos_dashboard.xml
+++ b/app/src/main/res/layout/activity_mpos_dashboard.xml
@@ -67,7 +67,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_56sdp"
-                            android:background="@color/logout_bg"
+                            android:background="@color/hidden_view_color"
                             android:foregroundGravity="center_horizontal"
                             android:padding="@dimen/_4sdp"
                             android:src="@drawable/ic_x"
