--- a/app/src/main/res/drawable/custom_keyboard_key_bg.xml
+++ b/app/src/main/res/drawable/custom_keyboard_key_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="2dp" android:color="@color/white" />
     <corners android:radius="5dp"/>
-    <stroke android:color="@color/blue_light"
+    <stroke android:color="@color/vblue_light"
         android:width="1dp"/>
     <solid android:color="@color/white"/>
 </shape>
