--- a/app/src/main/res/drawable/dash_bottom_radius.xml
+++ b/app/src/main/res/drawable/dash_bottom_radius.xml
@@ -6,9 +6,9 @@
             <corners android:bottomLeftRadius="@dimen/_10sdp"
                 android:bottomRightRadius="@dimen/_10sdp"/>
             <gradient
-                android:centerColor="@color/hidden_view_color"
-                android:endColor="@color/hidden_view_color"
-                android:startColor="@color/hidden_view_color" />
+                android:centerColor="@color/logout_bg"
+                android:endColor="@color/logout_bg"
+                android:startColor="@color/logout_bg" />
         </shape>
     </item>
 
