--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -9,7 +10,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btm_radius"
+            android:background="@drawable/bottom_radius"
             android:orientation="horizontal"
             android:paddingStart="@dimen/_22sdp"
             android:paddingTop="@dimen/_40sdp">
@@ -25,7 +26,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chevron_left" />
+                    android:src="@drawable/ic_back"
+                    app:tint="@color/primary_black" />
             </LinearLayout>
 
             <TextView
@@ -927,7 +929,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:src="@drawable/refund_icon" />
+                                android:src="@drawable/refund" />
 
                             <TextView
                                 android:id="@+id/RefundTV"
@@ -990,7 +992,8 @@
                                     android:layout_height="14dp"
                                     android:layout_gravity="center"
                                     android:layout_marginLeft="@dimen/_6sdp"
-                                    android:src="@drawable/ic_copy" />
+                                    android:src="@drawable/ic_copy"
+                                    app:tint="@color/primary_green" />
 
                             </LinearLayout>
 
