--- a/app/src/main/res/layout/custom_keyboard.xml
+++ b/app/src/main/res/layout/custom_keyboard.xml
@@ -189,6 +189,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.34"
+                        android:layout_marginBottom="@dimen/_21sdp"
                         android:orientation="horizontal">
 
                         <TextView
