--- a/app/src/main/res/layout/generate_qr_keyboard.xml
+++ b/app/src/main/res/layout/generate_qr_keyboard.xml
@@ -18,12 +18,15 @@
         <TextView
             android:id="@+id/keyOneTV"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="4dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:layout_weight="1"
+            android:fontFamily="@font/opensans_bold"
             android:background="@drawable/custom_keyboard_key_bg"
             android:gravity="center"
             android:text="1"
+            android:padding="20dp"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold" />
@@ -31,11 +34,13 @@
         <TextView
             android:id="@+id/keyTwoTV"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_margin="4dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:layout_weight="1"
+            android:fontFamily="@font/opensans_bold"
             android:background="@drawable/custom_keyboard_key_bg"
             android:gravity="center"
+            android:padding="20dp"
             android:text="2"
             android:textColor="@color/black"
             android:textSize="@dimen/_16sdp"
@@ -44,12 +49,14 @@
         <TextView
             android:id="@+id/keyThreeTV"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:layout_weight="1"
+            android:fontFamily="@font/opensans_bold"
             android:background="@drawable/custom_keyboard_key_bg"
             android:gravity="center"
             android:text="3"
+            android:padding="20dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_16sdp"
             android:textStyle="bold" />
@@ -77,12 +84,13 @@
                 <TextView
                     android:id="@+id/keyFourTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="4"
+                    android:padding="20dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
@@ -90,12 +98,13 @@
                 <TextView
                     android:id="@+id/keyFiveTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="5"
+                    android:padding="20dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
@@ -103,12 +112,13 @@
                 <TextView
                     android:id="@+id/keySixTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="6"
+                    android:padding="20dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
@@ -125,11 +135,12 @@
                 <TextView
                     android:id="@+id/keySevenTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
+                    android:padding="20dp"
                     android:text="7"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
@@ -138,12 +149,13 @@
                 <TextView
                     android:id="@+id/keyEightTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="8"
+                    android:padding="20dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
@@ -151,11 +163,12 @@
                 <TextView
                     android:id="@+id/keyNineTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
+                    android:padding="20dp"
                     android:text="9"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
@@ -173,11 +186,12 @@
                 <TextView
                     android:id="@+id/keyZeroTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
+                    android:padding="20dp"
                     android:text="0"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
@@ -186,12 +200,13 @@
                 <TextView
                     android:id="@+id/keyDotTV"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/custom_keyboard_key_bg"
                     android:gravity="center"
                     android:text="."
+                    android:padding="20dp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
@@ -199,15 +214,18 @@
                 <LinearLayout
                     android:id="@+id/keyBackLL"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_margin="4dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
+                    android:padding="20dp"
+                    android:layout_gravity="center"
                     android:background="@color/vlight_grey"
                     android:gravity="center">
 
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
+                        android:layout_gravity="center"
                         android:src="@drawable/ic_outline_backspace" />
 
                 </LinearLayout>
